--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
 
   <!-- Экран выбора персонажа -->
   <div id="character-select">
-    <h2>С приходом весны по всему дому появляются странные серые комочки</h2>
-	 <h3>Собери их все :)</h3>
+    <h2>Что это лежит на полу? Это кошка повсюду раскидала свою шерсть</h2>
+	 <h3>Тебе придется ее собрать :)</h3>
     <div style="display: flex; justify-content: center;">
       <button onclick="selectCharacter('masha')">Маша</button>
       <button onclick="selectCharacter('anton')">Антон</button>
     </div>
     <div style="display: flex; justify-content: center; margin-top: 20px;">
-      <img id="masha-image" src="images/masha.png" alt="Masha" style="display: none; width: 150px; height: 150px;" />
+      <img id="masha-image" src="images/masha.png" alt="Masha" style="display: none; width: 150px; height: 150px;margin-right: 20px;" />
       <img id="anton-image" src="images/anton.png" alt="Anton" style="display: none; width: 150px; height: 150px;" />
     </div>
   </div>
