--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
   <!-- Экран выбора персонажа -->
   <div id="character-select">
-    <h2>Что это лежит на полу? Это кошка повсюду раскидала свою шерсть</h2>
+    <h2>Что это лежит на полу? Это кошка повсюду раскидала свою шерсть.</h2>
 	 <h3>Тебе придется ее собрать :)</h3>
     <div style="display: flex; justify-content: center;">
       <button onclick="selectCharacter('masha')">Маша</button>
